реализовал getConfig и setConfig

--- a/app/server/views/testform.handlebars
+++ b/app/server/views/testform.handlebars
@@ -1,5 +1,4 @@
 <style>
-    
     form {
         padding-bottom: 10px;
     }
@@ -26,103 +25,118 @@
     </fieldset>
 </form>
 <div id="forms" class="unactive">
-{{!-- <form id="registration">
-    <fieldset>
-        <legend>Registration</legend>
-        <label>username<input type="text" name="username"></label>
-        <label>password<input type="password" name="password"></label>
-        <label>email<input type="email" name="email"></label>
-        <button type="submit">registration</button>
-    </fieldset>
+    {{!-- <form id="registration">
+        <fieldset>
+            <legend>Registration</legend>
+            <label>username<input type="text" name="username"></label>
+            <label>password<input type="password" name="password"></label>
+            <label>email<input type="email" name="email"></label>
+            <button type="submit">registration</button>
+        </fieldset>
 
-</form>
-<form id="login">
-    <fieldset>
-        <legend>Log in</legend>
-        <label>username<input type="text" name="username"></label>
-        <label>password<input type="password" name="password"></label>
-        <button type="submit">login</button>
-    </fieldset>
-</form>
-<form id="token">
-    <fieldset>
-        <legend>test token</legend>
-        <label><input type="text" name="token"></label>
-        <button type="submit">token</button>
-    </fieldset>
+    </form>
+    <form id="login">
+        <fieldset>
+            <legend>Log in</legend>
+            <label>username<input type="text" name="username"></label>
+            <label>password<input type="password" name="password"></label>
+            <button type="submit">login</button>
+        </fieldset>
+    </form>
+    <form id="token">
+        <fieldset>
+            <legend>test token</legend>
+            <label><input type="text" name="token"></label>
+            <button type="submit">token</button>
+        </fieldset>
 
-</form>
-<form id="sendemailpass">
-    <fieldset>
-        <legend>Sent email pass</legend>
-        <label>username<input type="text" name="username"></label>
-        <button type="submit">send email pass</button>
-    </fieldset>
+    </form>
+    <form id="sendemailpass">
+        <fieldset>
+            <legend>Sent email pass</legend>
+            <label>username<input type="text" name="username"></label>
+            <button type="submit">send email pass</button>
+        </fieldset>
 
-</form>
-<form id="newpassword">
-    <fieldset>
-        <legend>New password</legend>
-        <label>new password<input type="text" name="token"></label>
-        <label>new password<input type="password" name="password"></label>
-        <button type="submit">send email pass</button>
-    </fieldset>
+    </form>
+    <form id="newpassword">
+        <fieldset>
+            <legend>New password</legend>
+            <label>new password<input type="text" name="token"></label>
+            <label>new password<input type="password" name="password"></label>
+            <button type="submit">send email pass</button>
+        </fieldset>
 
-</form>
-<form id="logout">
-    <fieldset>
-        <legend>logout</legend>
-        <label>token<input type="text" name="token"></label>
-        <button type="submit">logout</button>
-    </fieldset>
+    </form>
+    <form id="logout">
+        <fieldset>
+            <legend>logout</legend>
+            <label>token<input type="text" name="token"></label>
+            <button type="submit">logout</button>
+        </fieldset>
 
-</form>
-<form id="refreshtoken">
-    <fieldset>
-        <legend>refreshtoken</legend>
-        <label>longToken<input type="text" name="longToken"></label>
-        <button type="submit">refreshtoken</button>
-    </fieldset>
-</form>
-<form id="test">
-    <fieldset>
-        <legend>test</legend>
-        <label>token<input type="text" name="token"></label>
-        <button type="submit">test</button>
-    </fieldset>
-</form> --}}
-<form id="getSMSСodeForRegistrationByTelephone">
-    <fieldset>
-        <legend>getSMSСodeForRegistrationByTelephone</legend>
-        <label>telephoneNumber<input type="text" name="telephoneNumber"></label>
-        <label>serialNumberOfPhone<input type="text" name="serialNumberOfPhone"></label>
-        <button type="submit">getSMSСodeForRegistrationByTelephone</button>
-    </fieldset>
-</form>
-<form id="getToken">
-    <fieldset>
-        <legend>getToken</legend>
-        <label>telephoneNumber<input type="text" name="telephoneNumber"></label>
-        <label>smsCode<input type="text" name="smsCode"></label>
-        <label>userName<input type="text" name="userName"></label>
-        <button type="submit">getToken</button>
-    </fieldset>
-</form>
-<form id="checkQRcode">
-    <fieldset>
-        <legend>checkQRcode</legend>
-        <label>qr<input type="text" name="qr"></label>
-        <label>token<input type="text" name="token"></label>
-        <button type="submit">checkQRcode</button>
-    </fieldset>
-</form>
-<form id="getCodeForRegistrationByEmail">
-    <fieldset>
-        <legend>getCodeForRegistrationByEmail</legend>
-        <label>email<input type="email" name="email"></label>
-        <button type="submit">getCodeForRegistrationByEmail</button>
-    </fieldset>
-</form>
+    </form>
+    <form id="refreshtoken">
+        <fieldset>
+            <legend>refreshtoken</legend>
+            <label>longToken<input type="text" name="longToken"></label>
+            <button type="submit">refreshtoken</button>
+        </fieldset>
+    </form>
+    <form id="test">
+        <fieldset>
+            <legend>test</legend>
+            <label>token<input type="text" name="token"></label>
+            <button type="submit">test</button>
+        </fieldset>
+    </form> --}}
+    <form id="getSMSСodeForRegistrationByTelephone">
+        <fieldset>
+            <legend>getSMSСodeForRegistrationByTelephone</legend>
+            <label>telephoneNumber<input type="text" name="telephoneNumber"></label>
+            <label>serialNumberOfPhone<input type="text" name="serialNumberOfPhone"></label>
+            <button type="submit">getSMSСodeForRegistrationByTelephone</button>
+        </fieldset>
+    </form>
+    <form id="getToken">
+        <fieldset>
+            <legend>getToken</legend>
+            <label>telephoneNumber<input type="text" name="telephoneNumber"></label>
+            <label>smsCode<input type="text" name="smsCode"></label>
+            <label>userName<input type="text" name="userName"></label>
+            <button type="submit">getToken</button>
+        </fieldset>
+    </form>
+    <form id="checkQRcode">
+        <fieldset>
+            <legend>checkQRcode</legend>
+            <label>qr<input type="text" name="qr"></label>
+            <label>token<input type="text" name="token"></label>
+            <button type="submit">checkQRcode</button>
+        </fieldset>
+    </form>
+    <form id="getCodeForRegistrationByEmail">
+        <fieldset>
+            <legend>getCodeForRegistrationByEmail</legend>
+            <label>email<input type="email" name="email"></label>
+            <button type="submit">getCodeForRegistrationByEmail</button>
+        </fieldset>
+    </form>
+    <form id="setConfig">
+        <fieldset>
+            <legend>setConfig</legend>
+            <label>conf<input type="text" name="conf"></label>
+            <label>token<input type="text" name="token"></label>
+            <button type="submit">setConfig</button>
+        </fieldset>
+    </form>
+    <form id="getConfig">
+        <fieldset>
+            <legend>getConfig</legend>
+            <label>token<input type="text" name="token"></label>
+            <button type="submit">getConfig</button>
+        </fieldset>
+    </form>
 </div>
 {{!-- <form id="experiment">
     <label>data<input type="text" name='data'></label>
@@ -157,12 +171,46 @@
         document.getElementById('forms').setAttribute('class', 'appear')
     })
 
-document.getElementById('getCodeForRegistrationByEmail').addEventListener('submit', (evt) => {
+    document.getElementById('setConfig').addEventListener('submit', (evt) => {
+        evt.preventDefault()
+        const form = evt.target
+        const body = JSON.stringify({
+            accessToken: form.elements.token.value,
+            conf: JSON.parse(form.elements.conf.value)
+        })
+        fetch(`https://${domen}/api/setConfig`, {
+            method: 'POST',
+            headers: new Headers(
+                {
+                    'Content-Type': 'application/json'
+                }
+            ),
+            body
+        })
+    })
+    document.getElementById('getConfig').addEventListener('submit', (evt) => {
+        evt.preventDefault()
+        const form = evt.target
+        const body = JSON.stringify({
+            accessToken: form.elements.token.value
+        })
+        fetch(`https://${domen}/api/getConfig`, {
+            method: 'POST',
+            headers: new Headers(
+                {
+                    'Content-Type': 'application/json'
+                }
+            ),
+            body
+        })
+    })
+
+    document.getElementById('getCodeForRegistrationByEmail').addEventListener('submit', (evt) => {
         evt.preventDefault()
         const form = evt.target
         const body = JSON.stringify({
             email: form.elements.email.value
-        })  
+        })
         fetch(`https://${domen}/api/getCodeForRegistrationByEmail`, {
             method: 'POST',
             headers: new Headers(
@@ -171,7 +219,7 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
                 }
             ),
             body
-        })  
+        })
     })
     document.getElementById('getSMSСodeForRegistrationByTelephone').addEventListener('submit', (evt) => {
         evt.preventDefault()
@@ -179,7 +227,7 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
         const body = JSON.stringify({
             telephoneNumber: form.elements.telephoneNumber.value,
             serialNumberOfPhone: form.elements.serialNumberOfPhone.value
-        })  
+        })
         fetch(`https://${domen}/api/getSMSCodeForRegistrationByTelephone`, {
             method: 'POST',
             headers: new Headers(
@@ -188,7 +236,7 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
                 }
             ),
             body
-        })  
+        })
     })
 
     document.getElementById('getToken').addEventListener('submit', (evt) => {
@@ -226,7 +274,7 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
         const body = JSON.stringify({
             accessToken: form.elements.token.value,
             deviceQRcode: form.elements.qr.value
-        })  
+        })
         fetch(`https://${domen}/api/checkLegalDevice`, {
             method: 'POST',
             headers: new Headers(
@@ -235,7 +283,7 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
                 }
             ),
             body
-        })  
+        })
     })
     /*
     document.getElementById('test').addEventListener('submit', (evt) => {
@@ -362,5 +410,5 @@ document.getElementById('getCodeForRegistrationByEmail').addEventListener('submi
         })
     })
     */
- 
+
 </script>
